--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@
   width: 90px;
   height: auto;
 }
+.mainBg {
+  background: rgb(46, 63, 87);
+  background: linear-gradient(90deg, rgb(63, 86, 119) 0%, rgba(33, 44, 61, 1) 42%, rgb(15, 21, 29) 100%);
+}
+.sign-up-btn:hover {
+  background-color: #28a745; /* Verde */
+  color: white; /* Testo bianco */
+  border-color: #28a745; /* Bordo verde */
+}
